--- a/assets/index3.html
+++ b/assets/index3.html
@@ -11,33 +11,38 @@
 
 <body>
     <div class="container">
+        <div id="highscores" class="hidden">
+        </div>
         <div class="quiz-box">
             <div id="quiz">
                 <h1>Coding Quiz</h1>
                 <div class="quiz-header">
                     <p id="progress">Question x of y</p>
                     <p id="count-down">10</p>
-                    <button class="start">Start</button>
+                    <button class="btn" id="start">Start</button>
+                    <button class="btn" id="scores">High scores</button>
                 </div>
-                <p id="question">What is your name?</p>
-                <div class="buttons">
-                    <button class="btn" id="btn0">
-                        A. <span id="choice0"></span>
-                    </button>
-                    <button class="btn" id="btn1">
-                        B. <span id="choice1"></span>
-                    </button>
-                    <button class="btn" id="btn2">
-                        C. <span id="choice2"></span>
-                    </button>
-                    <button class="btn" id="btn3">
-                        D. <span id="choice3"></span>
-                    </button>
+                <div id="question-wrapper" class="hidden">
+                    <p id="question">What is your name?</p>
+                    <div class="buttons">
+                        <button class="btn" id="btn0">
+                            A. <span id="choice0"></span>
+                        </button>
+                        <button class="btn" id="btn1">
+                            B. <span id="choice1"></span>
+                        </button>
+                        <button class="btn" id="btn2">
+                            C. <span id="choice2"></span>
+                        </button>
+                        <button class="btn" id="btn3">
+                            D. <span id="choice3"></span>
+                        </button>
+                    </div>
+                    <hr>
+                    <footer>
+                        <p>This is the footer</p>
+                    </footer>
                 </div>
-                <hr>
-                <footer>
-                    <p>This is the footer</p>
-                </footer>
             </div>
         </div>
     </div>
