--- a/assets/index3.html
+++ b/assets/index3.html
@@ -12,11 +12,6 @@
 <body>
     <div class="container">
         <div id="highscores" class="hidden">
-            <h2>Here is your high scores</h2>
-            <span class="scores"></span>
-            <label>Your Initials:</label>
-            <input class="initials" type="text" placeholder="Your Initials here">
-            <button class="submit-initials">Submit</button>
         </div>
         <div class="quiz-box">
             <div id="quiz">
@@ -25,7 +20,7 @@
                     <p id="progress">Question x of y</p>
                     <p id="count-down">10</p>
                     <button class="btn" id="start">Start</button>
-                    <button class="btn" id="scores">High scores<button>
+                    <!-- <button class="btn" id="scores">High scores<button> -->
                 </div>
                 <div id="question-wrapper" class="hidden">
                     <p id="question">What is your name?</p>
