--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,
     initial-scale=1.0">
     <title>Coding Quiz</title>
-    <link rel="stylesheet" href="./css/style3.css">
+    <link rel="stylesheet" href="./style3.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <script src="./js/script3.js"></script>
+    <script src="./script3.js"></script>
 </body>
 
 
