--- a/assets/index2.html
+++ b/assets/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,
     initial-scale=1.0">
     <title>High Scores</title>
-    <link rel="stylesheet" href="./style3.css">
+    <link rel="stylesheet" href="../style3.css">
 </head>
 
 <body>
@@ -15,5 +15,5 @@
         <span class="scores"></span>
     
     </div>
-    <script src="./script2.js"></script>
+    <script src="../script2.js"></script>
 </body>
